# graWzycie

./: CMakeLists.txt  README.md  build.cmd  build.sh  run.sh
include/: ctx.hpp  data.hpp  sw.hpp
src/: main.cpp
